fix uneven buttons
But I removed the images

--- a/static/css.css
+++ b/static/css.css
@@ -35,6 +35,7 @@ html, body, p, a{
 .buttonIcon{
 	width:100px;
 	margin:0;
+	display:none;
 }
 
 .buttonName{
